--- a/src/assets/styles/cmps/_expense-preview.scss
+++ b/src/assets/styles/cmps/_expense-preview.scss
@@ -4,9 +4,14 @@
     "img cat  amnt"
     "img note date"
     ;
+    grid-template-columns: 4rem 1fr 10rem;
 
-    place-items: center;
+    align-items: center;
+    column-gap: 1rem;
+    row-gap: 0.3rem;
 
+    margin-block: 1rem;
+    
     & img{
         grid-area: img;
         height: 2.5rem;
