--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -4,9 +4,13 @@
 
 @import "basics/base";
 @import "basics/helpers";
+@import "basics/layout";
 
+@import "cmps/app-header";
 @import "cmps/home-page";
-@import "cmps/_expense-index";
-@import "cmps/_expense-list";
+@import "cmps/expense-index";
+@import "cmps/expense-filter";
+@import "cmps/expense-list";
 @import "cmps/expense-preview";
 @import "cmps/expense-edit";
+@import "cmps/pie-chart";
