Refactor to work with backend

--- a/src/assets/styles/cmps/_expense-edit.scss
+++ b/src/assets/styles/cmps/_expense-edit.scss
@@ -41,6 +41,10 @@
             & :not(input, label) {
                 grid-column: span 2;
             }
+
+            & select{
+                text-transform: capitalize;
+            }
         }
     }
 
