--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -8,6 +8,7 @@ body {
     margin: 0;
 }
 
+h1,
 h2,
 h3,
 p {
@@ -21,4 +22,12 @@ button {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+.loader-backdrop {
+    position: fixed;
+    inset: 0;
+    background-color: rgba(255, 255, 255, 0.4);
+    display: grid;
+    place-content: center;
 }
