--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -1,5 +1,7 @@
 header{
-    height: 3rem;
+    height: 5rem;
     padding: 0.5rem;
     background-color:lightslategray;
+    align-items: center;
+
 }
