--- a/src/assets/styles/cmps/_expense-index.scss
+++ b/src/assets/styles/cmps/_expense-index.scss
@@ -6,10 +6,10 @@
     "list pie"
     ;
 
-    grid-template-rows: max-content 1fr;
+    grid-template-rows: max-content max-content 1fr;
     column-gap: 2rem;
 
-    & a{
+    &>a{
         margin-top: 1rem;
     }
 }
